# mlops_pbi_hs2

./: README.md
mlops_pbi/: .gitignore  .pre-commit-config.yaml  pyproject.toml
mlops_pbi/config/: main.yaml
mlops_pbi/config/process/: process1.yaml
mlops_pbi/data/raw/: get_activity_log20220707.csv  get_activity_log20220709.csv  get_activity_log20220713.csv  get_activity_log20220715.csv  get_activity_log20220716.csv  get_activity_log20220718.csv  get_activity_log20220719.csv  get_activity_log20220722.csv  get_activity_log20220725.csv  get_activity_log20220726.csv  get_activity_log20220727.csv  get_activity_log20220728.csv  get_activity_log20220729.csv  get_activity_log20220731.csv  get_activity_log20220801.csv  get_activity_log20220803.csv  get_activity_log20220804.csv  get_activity_log20220808.csv  get_activity_log20220809.csv  get_activity_log20220813.csv  get_activity_log20220814.csv  get_activity_log20220816.csv  get_activity_log20220817.csv  get_activity_log20220818.csv  get_activity_log20220819.csv  get_activity_log20220820.csv  get_activity_log20220821.csv  get_activity_log20220825.csv  get_activity_log20220827.csv  get_activity_log20220828.csv  get_activity_log20220829.csv  get_activity_log20220831.csv  (+3 more)
mlops_pbi/notebooks/: C:\Users\sibitoye\Documents\PBI_AuditLog_Final_Python_Output\PBI_Clean_2022.csv  C:\Users\sibitoye\Documents\PBI_AuditLog_Final_Python_Output\missing_PBI_Clean_July_August_2022.csv  ingestLogic.ipynb
mlops_pbi/src/: first_ingestion_point.py  helper.py  load_all_datasets.py  main.py  process.py  transform_logs.py
(+34 files in other folders)
